[package]
name = "atp_id"
version = "0.1.0"
edition = "2021"
description = "A small library to support Identity for the AT Protocol"
repository = "https://github.com/shuntingyard/atp_id/"
license = "GPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
atrium-api = "0.3" # Still downgraded for use with crate `atp_fire`
http = "0.2.9"
nom = "7.1.3"
nom-supreme = "0.8.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.107"
